2000-09-29  Bruno Haible  <haible@clisp.cons.org>

	* libintl.glibc: Update from current glibc version.

2000-09-18  Bruno Haible  <haible@clisp.cons.org>

	* dcigettext.c: Outside libc, use local variable names that don't
	clash with those in libc.
	* bindtextdom.c: Likewise.
	* textdomain.c: Likewise.

2000-07-31  Bruno Haible  <haible@clisp.cons.org>

	* plural.y: Include config.h. Needed to define 'inline' away for C
	compilers that don't support it.
	(yylex): Don't use gcc specific case range syntax.
	* loadmsgcat.y (INIT_GERMANIC_PLURAL): New macro, for old compilers.

2000-07-28  Bruno Haible  <haible@clisp.cons.org>

	Simplification: In all cases where $(gnulocaledir) is used, it is
	identical to $(localedir).
	* Makefile.in (DEFS): Remove setting for GNULOCALEDIR.
	* dcigettext.c (_nl_default_dirname): Initialize with LOCALEDIR.

2000-07-28  Bruno Haible  <haible@clisp.cons.org>

	* xopen-msg.sed: Renamed to ...
	* po2msg.sin: ... here.
	* linux-msg.sed: Remove file.
	* Makefile.in (DISTFILES.common): Update.

2000-07-28  Bruno Haible  <haible@clisp.cons.org>

	* po2tbl.sed.in: Renamed to ...
	* po2tbl.sin: ... here.
	* Makefile.in (DISTFILES.common): Update.

2000-07-28  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (uninstall): Synchronize with the install target.
	Really remove charset.alias when its reference count drops to 0.

2000-07-28  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (mkinstalldirs): New macro. Needed when configured with
	--srcdir=<relative pathname>; then ac_aux_dir will be a relative
	pathname rooted at the top builddir, and @MKINSTALLDIRS@ likewise.
	(install-exec, install-data): Use it.

2000-07-26  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (install-exec, install-data): Use $(SHELL) for calling
	$(MKINSTALLDIRS), don't rely on its execution permissions.

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): New variables.
	(libintl.la): Use them.
