@@ -1,3 +1,13 @@
+2000-10-12  Bruno Haible  <haible@clisp.cons.org>
+
+	* localealias.c (memcpy): Return first argument, just like the real
+	memcpy function does.
+	* bindtextdom.c (memcpy): Likewise.
+	* finddomain.c (memcpy): Likewise.
+	* l10nflist.c (memcpy): Likewise.
+	* textdomain.c (memcpy): Likewise.
+	From Paul Eggert <eggert@twinsun.com>.
+
 2000-09-29  Bruno Haible  <haible@clisp.cons.org>
 
 	* libintl.glibc: Update from current glibc version.
